--- a/src/app/components/car/car.component.html
+++ b/src/app/components/car/car.component.html
@@ -1,30 +1,51 @@
-<div
-  *ngIf="dataLoaded == false"
-  class="spinner-border text-success"
-  role="status"
->
+<div *ngIf="dataLoaded==false" class="spinner-border text-primary" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
+
 <table class="table">
   <thead>
     <tr class="table-dark">
-      <th>Cars</th>
+      <th routerLink="cars/">Cars</th>
     </tr>
   </thead>
 </table>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Car Name</th>
-      <th>Brand Name</th>
-      <th>Color Name</th>
-      <th>Daily Price</th>
-    </tr>
-  </thead>
-  <tr *ngFor="let car of cars">
-    <td>{{ car.carName }}</td>
-    <td>{{ car.brandName }}</td>
-    <td>{{ car.colorName }}</td>
-    <td>{{ car.dailyPrice }}</td>
-  </tr>
-</table>
+<div *ngIf="dataLoaded == true" class="row row-cols-1 row-cols-md-3 g-4">
+  <div class="col" *ngFor="let car of cars ">
+    <div class="card">
+        
+      <img
+        class="card-img-top"
+        style="object-fit: cover"
+        width="100"
+        height="50%"
+        [src]="carImage(car)"
+      />
+
+      <div class="card-body">
+        <h5 class="card-title">{{ car.carName }}</h5>
+      </div>
+      
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <i><b>Model Yılı | </b></i>{{ car.modelYear }}
+        </li>
+        <li class="list-group-item">
+          <i><b>Marka | </b></i>{{ car.brandName }}
+        </li>
+        <li class="list-group-item">
+          <i><b>Renk | </b></i>{{ car.colorName }}
+        </li>
+        <li class="list-group-item">
+          <i><b>Günlük Fiyat: </b></i>{{ car.dailyPrice + " ₺" }}
+        </li>
+        
+      </ul>
+
+      <div class="card-body">
+        <div class="row">
+          <button type="button" routerLink="/cars/carDetail/{{ car.carId }}" class="btn btn-success">Car Details..</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
